--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Svelte app</title>
-    <script type="module" src="../uibuilder/uibuilder.esm.min.js"></script>
+	<!-- <script type="module" src="../uibuilder/uibuilder.esm.min.js"></script> -->
 	<link rel="icon" type="image/png" href="./favicon.png">
-	<link rel="stylesheet" href="./build/bundle.css">
-	<script defer src="./index.js"></script>
-	<script defer src="./build/bundle.js"></script>
+	<link rel="stylesheet" href="./build/main.css">
+	<script defer type="module" src="./build/main.js"></script>
 </head>
+
 <body>
 </body>
+
 </html>
